--- a/apigateway/OcelotApiGateway/OcelotApiGateway.csproj
+++ b/apigateway/OcelotApiGateway/OcelotApiGateway.csproj
@@ -12,6 +12,8 @@
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.9.5" />
+    <PackageReference Include="Ocelot" Version="13.5.2" />
+    <PackageReference Include="Ocelot.Cache.CacheManager" Version="13.5.2" />
   </ItemGroup>
 
 </Project>
